set(project image_convert)
project(${project} C CXX)

add_executable(${project} src/image_convert.c)
target_link_libraries(${project} PRIVATE core)
target_link_libraries(${project} PRIVATE dbg)
target_link_libraries(${project} PRIVATE memory)
target_link_libraries(${project} PRIVATE utils)
target_link_libraries(${project} PRIVATE multi_core)
target_link_libraries(${project} PRIVATE vfile)
target_link_libraries(${project} PRIVATE vfile_memory)
target_link_libraries(${project} PRIVATE tiny_image_format)
target_link_libraries(${project} PRIVATE tiny_ktx)
target_link_libraries(${project} PRIVATE tiny_dds)
target_link_libraries(${project} PRIVATE gfx_image)
target_link_libraries(${project} PRIVATE host_platform)
target_link_libraries(${project} PRIVATE host_os)
add_dependencies(${project} luau)
target_link_libraries(${project} PRIVATE luau_compiler)
target_link_libraries(${project} PRIVATE luau_ast)
target_link_libraries(${project} PRIVATE luau_vm)
